// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TemplateConfirmation renders content and actions 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderTopLeftRadius": 20,
      "borderTopRightRadius": 20,
      "minHeight": 200,
      "paddingBottom": 20,
      "paddingTop": 24,
    }
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    CONTENT_MOCK
  </Text>
  <View
    collapsable={false}
    style={
      {
        "flex": 0,
        "justifyContent": "center",
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
      testID="bottomsheetfooter"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[MockFunction]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#121314",
            "borderRadius": 12,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="bottomsheetfooter-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          CONFIRM_TEXT_MOCK
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[MockFunction]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "marginLeft": 16,
            "marginTop": 0,
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="bottomsheetfooter-button-subsequent"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          CANCEL_TEXT_MOCK
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`TemplateConfirmation renders content without actions 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderTopLeftRadius": 20,
      "borderTopRightRadius": 20,
      "minHeight": 200,
      "paddingBottom": 20,
      "paddingTop": 24,
    }
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    CONTENT_MOCK
  </Text>
</View>
`;
